--- a/vue/style.css
+++ b/vue/style.css
@@ -18,6 +18,14 @@ div.dataTables_wrapper {
 	margin: 0 auto;
 }
 
+#connexion_error {
+	display: inline-block;
+	width: 30%;
+	height: inherit;
+	text-align: right;
+	color: #D80000;
+}
+
 .sous-champ {
 	width: 768px;
 	margin: 2em auto 0px;
@@ -167,8 +175,7 @@ nav.top ul {
 	color: white;
 	font-weight: bold;
 	cursor: pointer;
-	margin: 0 auto;
-	margin-top: 10px;
+	margin: 10px auto;
 	width: 150px;
 }
 .special_btn:hover {
@@ -186,8 +193,7 @@ nav.top ul {
 	color: white;
 	font-weight: bold;
 	cursor: pointer;
-	margin: 0 auto;
-	margin-top: 10px;
+	margin: 10px auto;
 }
 .deco_btn:hover {
 	background-color: #FF5656;
